--- a/libProcessor/build.gradle
+++ b/libProcessor/build.gradle
@@ -1,10 +1,11 @@
-apply plugin: 'java-library'
+apply plugin: 'java'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.auto.service:auto-service:1.0-rc2'
-    implementation 'com.squareup:javapoet:1.7.0'
+    compile 'com.google.auto.service:auto-service:1.0-rc2'
+    compile 'com.squareup:javapoet:1.7.0'
+    implementation project(':libannotation')
 }
 
 sourceCompatibility = "1.7"
 targetCompatibility = "1.7"
+
